Fix pillar icon vertical alignment and increase size to 54px

--- a/themes/simpleglobal/static/css/main.css
+++ b/themes/simpleglobal/static/css/main.css
@@ -305,8 +305,8 @@ h1, h2, h3, h4 {
 }
 
 .pillar-flag {
-  width: 36px;
-  height: 36px;
+  width: 54px;
+  height: 54px;
   border-radius: 50%;
   flex-shrink: 0;
 }
@@ -315,6 +315,7 @@ h1, h2, h3, h4 {
   font-family: 'Josefin Sans', sans-serif;
   font-size: var(--text-xl);
   font-weight: 400;
+  line-height: 1;
   margin-bottom: 0;
 }
 
